[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/Entities/Player.gd" type="Script" id=1]
[ext_resource path="res://Images/Effects/light.png" type="Texture" id=2]
[ext_resource path="res://Images/Entities/player.png" type="Texture" id=3]
[ext_resource path="res://Images/Entities/pewpew.jpg" type="Texture" id=4]
[ext_resource path="res://Images/Animations/Fade_ZoneLine.tres" type="Animation" id=5]
[ext_resource path="res://Sons/Entities/morph.wav" type="AudioStream" id=7]
[ext_resource path="res://Images/Animations/Heal.tres" type="Animation" id=8]
[ext_resource path="res://Images/Animations/Hurt.tres" type="Animation" id=9]
[ext_resource path="res://Images/Animations/Danger.tres" type="Animation" id=10]
[ext_resource path="res://Images/Animations/MegaDanger.tres" type="Animation" id=11]
[ext_resource path="res://Images/Animations/Surcharge.tres" type="Animation" id=12]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.560403, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.802013, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.829091 )
colors = PoolColorArray( 0.34902, 1, 0, 1, 1, 1, 1, 1 )

[sub_resource type="Animation" id=3]
resource_name = "Heal"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 2.00392, 2.00392, 2.00392, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.332215, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.792727 )
colors = PoolColorArray( 0, 0.976563, 1, 1, 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 25, 25 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 27, 27 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 550, 325 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.885906, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="SegmentShape2D" id=10]
a = Vector2( -55, 0 )
b = Vector2( 55, 0 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0.57047, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0, 0.621818 )
colors = PoolColorArray( 0.0343323, 0.601143, 0.976563, 1, 1, 1, 1, 1 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Heal" type="AnimationPlayer" parent="Sprite"]
anims/Heal = ExtResource( 8 )

[node name="HealP" type="CPUParticles2D" parent="Sprite"]
z_index = -1
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 600, 600 )
gravity = Vector2( 0, 0 )
radial_accel = -5000.0
scale_amount = 0.1
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="Hurt" type="AnimationPlayer" parent="Sprite"]
anims/Heal = SubResource( 3 )
anims/Hurt = ExtResource( 9 )

[node name="Danger" type="AnimationPlayer" parent="Sprite"]
anims/Danger = ExtResource( 10 )

[node name="MegaDanger" type="AnimationPlayer" parent="Sprite"]
anims/MegaDanger = ExtResource( 11 )

[node name="Surcharge" type="AnimationPlayer" parent="Sprite"]
anims/Surcharge = ExtResource( 12 )

[node name="SurchargeP" type="CPUParticles2D" parent="Sprite"]
emitting = false
amount = 10
explosiveness = 0.1
lifetime_randomness = 0.2
local_coords = false
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 300, 300 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
radial_accel = 100.0
scale_amount = 0.01
scale_amount_random = 0.01
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
shadow_enabled = true

[node name="Zone" type="Area2D" parent="."]
modulate = Color( 0.0745098, 0.521569, 1, 1 )
show_behind_parent = true
collision_layer = 16
collision_mask = 4

[node name="Zone Limit" type="Line2D" parent="Zone"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
points = PoolVector2Array( 550, 0, -550, 0 )
width = 2.0
default_color = Color( 0.0705882, 0.870588, 0.929412, 0.784314 )

[node name="Fade" type="AnimationPlayer" parent="Zone/Zone Limit"]
autoplay = "Fade_ZoneLine"
anims/Fade_ZoneLine = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone"]
position = Vector2( 0, 325 )
shape = SubResource( 8 )

[node name="CreateLeft" type="CPUParticles2D" parent="Zone"]
position = Vector2( -10, 0 )
amount = 30
randomness = 0.61
lifetime_randomness = 0.7
texture = ExtResource( 2 )
direction = Vector2( -1, 0 )
gravity = Vector2( 0, 0 )
initial_velocity = 25.0
initial_velocity_random = 0.5
scale_amount = 0.01
scale_amount_curve = SubResource( 9 )
color = Color( 0.0705882, 0.870588, 0.929412, 0.784314 )

[node name="CreateRight" type="CPUParticles2D" parent="Zone"]
position = Vector2( 10, 0 )
amount = 30
randomness = 0.61
lifetime_randomness = 0.7
texture = ExtResource( 2 )
gravity = Vector2( 0, 0 )
initial_velocity = 25.0
initial_velocity_random = 0.5
scale_amount = 0.01
scale_amount_curve = SubResource( 9 )
color = Color( 0.0705882, 0.870588, 0.929412, 0.784314 )

[node name="Zone-hide" type="Sprite" parent="."]
modulate = Color( 0.0745098, 0.0745098, 0.0823529, 1 )
show_behind_parent = true
position = Vector2( 0, -324 )
scale = Vector2( 2.20131, 1.29547 )
z_index = -4
texture = ExtResource( 4 )

[node name="GopMorpher" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="GopMorpher"]
light_mask = 0
scale = Vector2( 10, 1 )
shape = SubResource( 10 )

[node name="MorphSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Tween" type="Tween" parent="MorphSFX"]

[node name="HurtSFX" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="PlayerSFX" type="AudioStreamPlayer2D" parent="."]

[node name="Trail" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2( -8, 15 )
scale = Vector2( 11.1111, 11.1111 )
amount = 15
lifetime = 0.08
lifetime_randomness = 0.1
local_coords = false
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 0.2
direction = Vector2( 0, 1 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
scale_amount = 0.01
scale_amount_random = 0.01
scale_amount_curve = SubResource( 11 )
color_ramp = SubResource( 12 )
hue_variation = 0.05
hue_variation_random = 1.0

[node name="Trail2" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2( 8, 15 )
scale = Vector2( 11.1111, 11.1111 )
amount = 15
lifetime = 0.08
lifetime_randomness = 0.1
local_coords = false
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 0.2
direction = Vector2( 0, 1 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
scale_amount = 0.01
scale_amount_random = 0.01
scale_amount_curve = SubResource( 11 )
color_ramp = SubResource( 12 )
hue_variation = 0.05
hue_variation_random = 1.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="GopMorpher" to="." method="_on_GopMorpher_body_entered"]
